--- a/fxml/static/editor_word.fxml
+++ b/fxml/static/editor_word.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -18,7 +19,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox spacing="20.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.WordEditorController">
+<VBox spacing="20.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.WordEditorController">
    <children>
       <Separator prefWidth="200.0" />
       <Label text="Main ">
@@ -186,8 +187,8 @@
                   </CheckBox>
                   <HBox alignment="CENTER_LEFT">
                      <children>
-                        <Label fx:id="lengthValueLabel" prefWidth="20.0" styleClass="slider-label" text="10" />
-                        <Slider fx:id="lengthSlider" blockIncrement="1.0" majorTickUnit="10.0" max="50.0" min="1.0" minorTickCount="5" snapToTicks="true" value="10.0" HBox.hgrow="ALWAYS" />
+                        <TextField fx:id="lengthValue" alignment="CENTER" minWidth="0.0" prefWidth="20.0" style="-fx-padding: 2;" text="10" />
+                        <Slider fx:id="lengthSlider" blockIncrement="1.0" majorTickUnit="10.0" max="30.0" min="1.0" minorTickCount="5" showTickLabels="true" showTickMarks="true" value="10.0" HBox.hgrow="ALWAYS" />
                      </children>
                      <padding>
                         <Insets left="5.0" />
@@ -198,8 +199,8 @@
             <GridPane alignment="CENTER_LEFT" hgap="5.0" vgap="10.0" GridPane.columnIndex="1">
                <columnConstraints>
                   <ColumnConstraints minWidth="10.0" />
-                  <ColumnConstraints minWidth="10.0" prefWidth="20.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints />
+                  <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints minHeight="10.0" />
@@ -208,14 +209,14 @@
                </rowConstraints>
                <children>
                   <CheckBox fx:id="emotionalityCheckBox" mnemonicParsing="false" styleClass="text-color1" text="Emotionality" />
-                  <Label fx:id="emotionalityValueLabel" styleClass="slider-label" text="0.5" GridPane.columnIndex="1" />
-                  <Slider fx:id="emotionalitySlider" blockIncrement="0.01" majorTickUnit="0.5" max="1.0" minorTickCount="5" showTickMarks="true" snapToTicks="true" value="0.5" GridPane.columnIndex="2" />
+                  <TextField fx:id="emotionalityValue" alignment="CENTER" minWidth="0.0" prefWidth="35.0" style="-fx-padding: 2;" text="0,50" GridPane.columnIndex="1" />
+                  <Slider fx:id="emotionalitySlider" blockIncrement="0.01" majorTickUnit="0.5" max="1.0" minorTickCount="5" showTickMarks="true" value="0.5" GridPane.columnIndex="2" />
                   <CheckBox fx:id="vulgarityCheckBox" layoutX="10.0" layoutY="11.0" mnemonicParsing="false" styleClass="text-color1" text="Vulgarity" GridPane.rowIndex="1" />
-                  <Label fx:id="vulgarityValueLabel" layoutX="110.0" layoutY="12.0" styleClass="slider-label" text="0.5" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Slider fx:id="vulgaritySlider" blockIncrement="0.01" layoutX="110.0" layoutY="8.0" majorTickUnit="0.5" max="1.0" minorTickCount="5" showTickMarks="true" snapToTicks="true" value="0.5" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <TextField fx:id="vulgarityValue" alignment="CENTER" layoutX="99.0" layoutY="11.0" minWidth="0.0" prefWidth="35.0" style="-fx-padding: 2;" text="0,50" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Slider fx:id="vulgaritySlider" blockIncrement="0.01" layoutX="110.0" layoutY="8.0" majorTickUnit="0.5" max="1.0" minorTickCount="5" showTickMarks="true" value="0.5" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                   <CheckBox fx:id="formalityCheckBox" layoutX="10.0" layoutY="46.0" mnemonicParsing="false" styleClass="text-color1" text="Formality" GridPane.rowIndex="2" />
-                  <Label fx:id="formalityValueLabel" layoutX="135.0" layoutY="46.0" styleClass="slider-label" text="0.5" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Slider fx:id="formalitySlider" blockIncrement="0.01" layoutX="10.0" layoutY="8.0" majorTickUnit="0.5" max="1.0" minorTickCount="5" showTickMarks="true" snapToTicks="true" value="0.5" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <TextField fx:id="formalityValue" alignment="CENTER" layoutX="99.0" layoutY="45.0" minWidth="0.0" prefWidth="35.0" style="-fx-padding: 2;" text="0,50" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Slider fx:id="formalitySlider" blockIncrement="0.01" layoutX="10.0" layoutY="8.0" majorTickUnit="0.5" max="1.0" minorTickCount="5" showTickMarks="true" value="0.5" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                </children>
             </GridPane>
             <VBox spacing="5.0" GridPane.rowIndex="1">
@@ -360,7 +361,7 @@
          <children>
             <Label layoutX="30.0" layoutY="10.0" text="Translations">
                <VBox.margin>
-                  <Insets bottom="5.0" top="20.0" />
+                  <Insets bottom="5.0" />
                </VBox.margin>
                <styleClass>
                   <String fx:value="text-color1" />
@@ -374,7 +375,7 @@
                   <String fx:value="small-title" />
                </styleClass>
                <VBox.margin>
-                  <Insets bottom="5.0" />
+                  <Insets bottom="5.0" top="20.0" />
                </VBox.margin>
             </Label>
             <TextArea fx:id="definitionsArea" maxWidth="500.0" prefHeight="100.0" scrollTop="200.0" wrapText="true" />
