--- a/fxml/static/editor_word.fxml
+++ b/fxml/static/editor_word.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox spacing="20.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.WordEditorController">
+<VBox spacing="20.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.WordEditorController">
    <children>
       <Separator prefWidth="200.0" />
       <Label text="Main ">
@@ -188,7 +188,7 @@
                   <HBox alignment="CENTER_LEFT">
                      <children>
                         <TextField fx:id="lengthValue" alignment="CENTER" minWidth="0.0" prefWidth="20.0" style="-fx-padding: 2;" text="10" />
-                        <Slider fx:id="lengthSlider" blockIncrement="1.0" majorTickUnit="10.0" max="30.0" min="1.0" minorTickCount="5" showTickLabels="true" showTickMarks="true" value="10.0" HBox.hgrow="ALWAYS" />
+                        <Slider fx:id="lengthSlider" blockIncrement="1.0" majorTickUnit="10.0" max="60.0" min="1.0" minorTickCount="5" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="10.0" HBox.hgrow="ALWAYS" />
                      </children>
                      <padding>
                         <Insets left="5.0" />
@@ -210,13 +210,13 @@
                <children>
                   <CheckBox fx:id="emotionalityCheckBox" mnemonicParsing="false" styleClass="text-color1" text="Emotionality" />
                   <TextField fx:id="emotionalityValue" alignment="CENTER" minWidth="0.0" prefWidth="35.0" style="-fx-padding: 2;" text="0,50" GridPane.columnIndex="1" />
-                  <Slider fx:id="emotionalitySlider" blockIncrement="0.01" majorTickUnit="0.5" max="1.0" minorTickCount="5" showTickMarks="true" value="0.5" GridPane.columnIndex="2" />
+                  <Slider fx:id="emotionalitySlider" blockIncrement="0.05" majorTickUnit="0.25" max="1.0" showTickMarks="true" snapToTicks="true" value="0.5" GridPane.columnIndex="2" />
                   <CheckBox fx:id="vulgarityCheckBox" layoutX="10.0" layoutY="11.0" mnemonicParsing="false" styleClass="text-color1" text="Vulgarity" GridPane.rowIndex="1" />
                   <TextField fx:id="vulgarityValue" alignment="CENTER" layoutX="99.0" layoutY="11.0" minWidth="0.0" prefWidth="35.0" style="-fx-padding: 2;" text="0,50" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Slider fx:id="vulgaritySlider" blockIncrement="0.01" layoutX="110.0" layoutY="8.0" majorTickUnit="0.5" max="1.0" minorTickCount="5" showTickMarks="true" value="0.5" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Slider fx:id="vulgaritySlider" blockIncrement="0.05" layoutX="110.0" layoutY="8.0" majorTickUnit="0.25" max="1.0" showTickMarks="true" snapToTicks="true" value="0.5" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                   <CheckBox fx:id="formalityCheckBox" layoutX="10.0" layoutY="46.0" mnemonicParsing="false" styleClass="text-color1" text="Formality" GridPane.rowIndex="2" />
                   <TextField fx:id="formalityValue" alignment="CENTER" layoutX="99.0" layoutY="45.0" minWidth="0.0" prefWidth="35.0" style="-fx-padding: 2;" text="0,50" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Slider fx:id="formalitySlider" blockIncrement="0.01" layoutX="10.0" layoutY="8.0" majorTickUnit="0.5" max="1.0" minorTickCount="5" showTickMarks="true" value="0.5" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <Slider fx:id="formalitySlider" blockIncrement="0.05" layoutX="10.0" layoutY="8.0" majorTickUnit="0.25" max="1.0" showTickMarks="true" value="0.5" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                </children>
             </GridPane>
             <VBox spacing="5.0" GridPane.rowIndex="1">
